# edgechain

./: .env.example  .gitignore  .vercelignore  AFRICAN_DATA_REGIONS.md  ARCHITECTURE.md  ARDUINO_BLE_COMPLETE_FLOW.md  ARDUINO_DEVICE_REGISTRATION.md  ARDUINO_FL_INTEGRATION.md  AUDIT_REPORT.md  CLAUDE.md  CODEBASE_STATUS.md  DEPLOYMENT_SUCCESS.md  Dockerfile.unified  FEDAVG_IMPLEMENTATION.md  FRONTEND_STATUS.md  HARDWARE_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Msingi.md  NEXT_STEPS_ISSUES.md  PRIVACY_ARCHITECTURE_SUMMARY.md  PROJECT_STATUS.html  PROJECT_STATUS.md  README.md  SECURITY.md  SET_GITHUB_SECRET.md  SYSTEM_COMPLETENESS_ANALYSIS.md  SYSTEM_FLOW.md  VERIFIABLE_AI_STRATEGY.md  ZK_PROOF_FEATURES.md  build-vercel.sh  package-lock.json  package.json  reset-demo.sh  turbo.json  vercel.json
app/: app.js  index.html  styles.css
research/python-lab/: .gitignore  README.md  pyproject.toml
research/python-lab/docs/: experiment-demo-guide.md
research/python-lab/src/edgechain_lab/: __init__.py  cli.py  config.py  reproducibility.py
research/python-lab/src/edgechain_lab/attacks/: __init__.py  perturbations.py  scenarios.py  suite.py
research/python-lab/src/edgechain_lab/data/: __init__.py  schemas.py  synthetic_odzi.py  validation.py
research/python-lab/src/edgechain_lab/experiments/: llm_oversight.py  mars_baselines.py  synthetic_odzi.py
research/python-lab/tests/: test_attacks.py  test_fl_core.py  test_mars_baselines.py  test_mars_scores.py  test_oversight.py  test_reproducibility.py  test_schemas.py  test_synthetic_odzi.py
(+287 files in other folders)
