[project]
name = "edgechain-python-lab"
version = "0.1.0"
description = "Synthetic EdgeChain experiments for privacy-preserving FL and oversight"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "torch>=2.3.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39.0"]
dev = [
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
edgechain-lab = "edgechain_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgechain_lab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["edgechain_lab"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "matplotlib.*", "pandas.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
